; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_main.c_initialize_core_pattern.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_main.c_initialize_core_pattern.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_early_core_pattern = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"/proc/sys/kernel/core_pattern\00", align 1
@WRITE_STRING_FILE_DISABLE_BUFFER = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [68 x i8] c"Failed to write '%s' to /proc/sys/kernel/core_pattern, ignoring: %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @initialize_core_pattern to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @initialize_core_pattern(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @arg_early_core_pattern, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %6, %1
  br label %24

10:                                               ; preds = %6
  %11 = call i32 (...) @getpid_cached()
  %12 = icmp ne i32 %11, 1
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  br label %24

14:                                               ; preds = %10
  %15 = load i32, i32* @arg_early_core_pattern, align 4
  %16 = load i32, i32* @WRITE_STRING_FILE_DISABLE_BUFFER, align 4
  %17 = call i32 @write_string_file(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %16)
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* %3, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %14
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* @arg_early_core_pattern, align 4
  %23 = call i32 @log_warning_errno(i32 %21, i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.1, i64 0, i64 0), i32 %22)
  br label %24

24:                                               ; preds = %9, %13, %20, %14
  ret void
}

declare dso_local i32 @getpid_cached(...) #1

declare dso_local i32 @write_string_file(i8*, i32, i32) #1

declare dso_local i32 @log_warning_errno(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
